--- a/intro.tex
+++ b/intro.tex
@@ -1,8 +1,8 @@
 \section{Introduction}
 \label{sec:introduction}
-In recent years, several powerful relational learning models have been proposed to solve the problem commonly referred to as \textit{link prediction} that consists in predicting the likelihood of a future association between two nodes in a network (\cite{Liben-Nowell07, HassanZaki11}). Among such models, the class of probabilistic, generative models has received much attention as such models can be used to both generate artificial networks and infer new links from existing ones. Two main class of models have been proposed and studied in the literature: The feature based model and the class based (or cluster based) model: Two seminal work within those classes of model are respectively the latent feature model (\cite{BMF}) and its non-parametric extension (\cite{ILFRM}), and the mixed-membership stochastic block model (\cite{MMSB}) and its non parametric extensions (\cite{iMMSB,diMMSB}). In this paper, we focus on this two model, and study some of its properties related to link prediction in social networks. 
+In recent years, several powerful relational learning models have been proposed to solve the problem commonly referred to as \textit{link prediction} that consists in predicting the likelihood of a future association between two nodes in a network \cite{Liben-Nowell07, HassanZaki11}. Among such models, the class of probabilistic, generative models has received much attention as such models can be used to both generate artificial networks and infer new links from existing ones. Two main class of models have been proposed and studied in the literature: The feature based model and the class based (or cluster based) model: Two seminal work within those classes of model are respectively the latent feature model \cite{BMF} and its non-parametric extension \cite{ILFRM}, and the mixed-membership stochastic block model \cite{MMSB} and its non parametric extensions \cite{iMMSB,diMMSB}. In this paper, we focus on this two model, and study some of its properties related to link prediction in social networks. 
 
-Indeed, although drawn from a wide range of domains, most real world social networks exhibit common properties, such as the \textit{homophily} and \textit{preferential attachement} and \textit{small world} effects (\cite{Newman2010, Barabasi2003}). 
+Indeed, although drawn from a wide range of domains, most real world social networks exhibit common properties, such as the \textit{homophily}, \textit{preferential attachement} and \textit{small world} effects \cite{Newman2010, Barabasi2003}. 
 
 
 A natural question that arises is thus whether or not models as MMSB and ILFM comply with such properties. Link prediction model, typically learned or given, describe a set of nodes and links between them; Such data defines a random structure $Y$. Given that, we learn a model parameters $\hat \theta$, such that one can then predict the probability that a new link will be drawn between two given nodes of the network by studying the following quantity:
@@ -21,7 +21,7 @@ A second possible use of Bayesian models is as a pure generative model to genera
 \end{equation}
 This quantity is know as the evidence for the data.
 
-The question we ask ourselves in this setting is thus: \textit{Do link prediction models comply with the homophily preferential attachment effects}.
+The question we ask ourselves in this setting is thus: \textit{Do link prediction models comply with the homophily and preferential attachment effects}.
 
 
-The remainder of the paper is organized as follows. In the second section we set up the probabilistic context of our analysis, Then we present two general calss of models in this settings know as class based models and feature based models.
+The remainder of the paper is organized as follows. In the second section \ref{sec:background} we set up the probabilistic context of our analysis, Then in section \ref{sec:models} we present two general class of models in this settings know as class based models and feature based models. Then in section \ref{sec:homophily} and \ref{sec:burstiness} we propose respectively formal definition for the homophily and preferential effects and study how models comply with this propoerties. \textcolor{red}{Then section on feature dynamics and sparsity}. In section \ref{sec:experiments} we report an empirical study of the predictive performance on synthetic and real networks with regards to the properties. We conclude in the last section \ref{sec:concl}. 
