--- a/expe.tex
+++ b/expe.tex
@@ -7,6 +7,7 @@ This section is organized as follow In first subsection we descibed our measure 
 
 \subsection{A measures for the preferential attachment effect}
 
+\label{sec:experiments-busrt}
 Preferential attachment leads to networks characterized by a degree distribution with heavy tail which can take the form of a power law. To evaluate this property,  we  plot the degree distributions in log log scale for the original network and the generated network. Comparison of the degree distribution with a linear function in the log-log scale  gives us a qualitative measure for the preferential attachment. However, for a better evaluation of the power law behavior of degree distribution we rely on a  goodnees a fit based on a Kolmogorov-Smirnov (KS) test. We follow the protocol described in \cite{clauset2009power} which consists of the following steps:
 \begin{itemize}
 	\item Estimate the parameters $x_{min}$ and $\alpha$ of the power law model.
