--- a/background.tex
+++ b/background.tex
@@ -4,7 +4,7 @@ Without loss of generality, we focus on social networks with binary relationship
 
 For the link prediction problem in social networks, there is two main approach found in the machine learning literrature. One based on matrix factorization \cite{menon2011link} and the other based on probabilistic models \cite{goldenberg2010survey}. While the former approach often lead to optimization algorithms that scale better, the second offer a richer expressivness and data explanation power, it is worth to say that, as for PLSA method, it is always possible to normalize matrices to view the factorization problem as a a probabilistic model. But a deeper relation exists which highlight similarities and differences between both representations. It is due the the assumptions of exchangeability that we make on data, that is implicit for matrix factorization models, that we expose now.\\
 
-Let's consider the parameters of a link prediction model consisting of a tuple $\Theta = \{ \mat{F} , \mat{\Phi}\}$ such as $\mat{F} \in \mathcal{F}^{N\times K}$ is a matrix representing the latent features of nodes and $\mat{\Phi} \in \mathcal{W}^{K\times K}$ a matrix of weight interactions such that each feaure vector $(\mat{f}_i)_{i=1}^N$ are i.i.d and each weight $\phi_{kk'}$ for $(k,k') \in K\times K$ are also i.i.d \footnote{Note that the features iid assumptions don't hold for IBP based model, but the exchangeability still hold as mentionned here \ref{orbanz2015bayesian}}. The Haldous-Hoover theorem \cite{orbanz2015bayesian} tell us that under such assumptions, that likelihood of links in a network are conditionally i.i.d given $\Theta$, and more precisely we have $\p(y_{ij}|\Theta) = \mat{f}_i \Phi \mat{f}_j^T$.
+Let's consider the parameters of a link prediction model consisting of a tuple $\Theta = \{ \mat{F} , \mat{\Phi}\}$ such as $\mat{F} \in \mathcal{F}^{N\times K}$ is a matrix representing the latent features of nodes and $\mat{\Phi} \in \mathcal{W}^{K\times K}$ a matrix of weight interactions such that each feaure vector $(\mat{f}_i)_{i=1}^N$ are i.i.d and each weight $\phi_{kk'}$ for $(k,k') \in K\times K$ are also i.i.d \footnote{Note that the features iid assumptions doesn't hold for IBP based model, but the exchangeability still holds as mentioned here \ref{orbanz2015bayesian}}. The Haldous-Hoover theorem \cite{orbanz2015bayesian} tell us that under such assumptions, that likelihood of links in a network are conditionally i.i.d given $\Theta$, and more precisely we have $\p(y_{ij}|\Theta) = \mat{f}_i \Phi \mat{f}_j^T$.
 
 The learning problem consist in finding the best model parameters given some criterion to reconstruct the data such as $\p(Y) \approx \mat{F}\mat{\Phi}\mat{F}^T$. 
 
@@ -40,7 +40,7 @@ This formalism is similar to the work of Buntine on Discrete Component Ananlysis
 \end{equation}
 
 %See the Appendix~\ref{sec:mixmembership} for a justification of eq \eqref{eq:mf} using a Mixed Membership Model approach.
-A key point here, is that the Stochatistic Blockmodel well studied in the literrature \cite{goldenberg2010survey}, where nodes of the networks belong only to one clusters (blockmodel) is a special case of this formalism (as well as MMSB and ILFM for extrem case(limit case)) when the feature vector $f_i$ of node $i$ has one element corresponding to the membership while all the other are zeros. Besides the choice of the priors over $\mat{F}$ and $\mat{\Phi}$ represents the context in which  their elements can evolve.
+A key point here, is that the Stochatistic Blockmodel well studied in the literrature \cite{goldenberg2010survey}, where nodes of the networks belong only to one clusters (blockmodel) is a special case of this formalism (as well as IMMSB and ILFM for extrem case(limit case)) when the feature vector $f_i$ of node $i$ has one element corresponding to the membership while all the other are zeros. Besides the choice of the priors over $\mat{F}$ and $\mat{\Phi}$ represents the context in which  their elements can evolve.
 
-In the next session we review both iMMSB and ILFM more precisely.
+In the next session we review both IMMSB and ILFM more precisely.
 
