--- a/main.tex
+++ b/main.tex
@@ -55,6 +55,7 @@ Prediction in Social Networks ?}
 \newtheorem{definition}{Definition}[section]
 \newtheorem{proposition}{Proposition}[section]
 \newtheorem{theorem}{Theorem}[section]
+\newtheorem{corollary}{Corollary}[section]
 
 \begin{document}
 	
