--- a/burstiness.tex
+++ b/burstiness.tex
@@ -19,28 +19,41 @@ In the context of social networks, the notion of burstiness, or preferential att
 
 
 \begin{definition}[Burstiness in social networks]
-Let $i$ be a node in a social network $G=(V,E)$, and let $d_i$ denote its degree. Furthermore, let $\mathcal{M} \in \{\M_e, \M_g\}$ be a link prediction model as defined in Section~\ref{sec:models}.
+Let $i$ be a node in a social network $G=(V,E)$, and let $d_i$ denote its degree. Furthermore, let $\mathcal{M} \in \{\M_e, \M_g\}$ be a link prediction model as defined in Section~\ref{sec:models}, and let $\Delta_n$ be the discrete differentiation on $n$: 
 \begin{description}
- \item[(i)] \emph{Global Preferential Attachment}: we say that $\mathcal{M}$ satisfies the global preferential attachement iff, for any node $j \in V$ not connected to $i$, $\pr(y_{ij}=1 \mid d_i \ge n, \M)$ increases with $n$.
- \item[(ii)] \emph{Local Preferential Attachment}: we say that $\mathcal{M}$ satisfies the local preferential attachement iff, for any node $j \in V$ not connected to $i$ and belonging to the same community as $i$, $\pr(y_{ij}=1 \mid d_{i,c} \ge n, \M$ increases with $n$; $d_{i,c}$ denotes the degree of node $i$ in its community.
-  \item[(iii)] \emph{Feature Burstiness}: we say that $\mathcal{M}$ satisfies the feature burstiness effect, iff, for any node $i$ and latent feature $k$, $\pr(f_{ik} > 0 \mid \mat{f}_{\bm{.}k}^{-ik} \ge n, \M)$ increases with $n$; where $\mat{f}_{\bm{.}k}^{-ik}$ denotes the number of nodes, other than node $i$, assigned to latent class/feature $k$ in the network.
+\item[(i)] \emph{Global Preferential Attachment}: we say that $\mathcal{M}$ satisfies the global preferential attachement iff, for any node $j \in V$ not connected to $i$, we have:
+ \begin{equation}
+ \Delta_n \pr(d_i \geq n+1 | d_i \geq n,  \M) > 0
+ \end{equation}
+\item[(ii)] \emph{Local Preferential Attachment}: we say that $\mathcal{M}$ satisfies the local preferential attachement iff, for any node $j \in V$ not connected to $i$ and belonging to the same community as $i$, we have:
+  \begin{equation}
+ \Delta_n \pr(d_{i,c} \geq n+1 | d_{i,c} \geq n,  \M) > 0
+ \end{equation}
+  Where $d_{i,c}$ denotes the degree of node $i$ in its community.
+\item[(iii)] \emph{Feature Burstiness}: we say that $\mathcal{M}$ satisfies the feature burstiness effect, iff, for any feature $k$ in the network,   
+  \begin{equation}
+	\Delta_n \pr(f_{\bm{.}k} \geq n+1 | f_{\bm{.}k} \geq n,  \M) > 0
+  \end{equation}
+   Where $f_{\bm{.}k}$ denotes the sum of the k-th features over all network's node such that $f_{\bm{.}k} = \sum_{j=0}^{N-1} f_{jk}$.
 \end{description}
 \label{def:burst-soc-net}
 \end{definition}
 %
-There are two things to note here. The first one is that $f_{ik}$ in (iii) equals $1$ for ILFM (as it relies on binary features), and is in $[0,1]$ for IMMSB. The second one is that the fact that the probability $\pr(y_{ij}=1 \mid d_i \ge n, \M)$ increases with $n$ is equivalent to the fact that the probability $\pr(d_{i} \ge n+1 \mid d_i \ge n, \M)$ increases with $n$. Indeed:
+Those definitions defines a burstiness property at different level of the networks always capturing the idea that the more an object (ie a link, or a feature) is observed in a the network, the more likely it will be observed again. Nevertheless, the definition of the burstiness involving an inequalities is not easy to handle in general. Thus we study in the following, a way to formulate it in a more analytic convenient form. Let us first define an appropriate random structure for exchangeable networks.
 
+\begin{definition}
+	Let $n$ and $N$ be two natural integer such that $N>\geq n$. We define the random structure $x^{N,n}$ as a set of $N$ binary value having $n$ elements such that $\sum_{i=0}^N P(x^{N,i}) = 1$
+	\label{def:rd_struct}
+\end{definition}
 
+This definition enables the link between the random variable $n$ being a integer (a node degree for example) and the structure that is homogeneous to a row/column in a adjacency matrix that contains in some way this integer.
 
+\begin{theorem} \label{th:burst_exch}
+	 A degree distribution $p(d_i=n)$ of any node $i$ in a jointly exchangeable graph $G(V,E)$ is bursty iff :
+	\begin{equation}
+	 \frac{(n+1)(N-n-1)}{(n+2)(N-n)}\p(y_{ij}=1 | d_i^{N,n+1})  > \p(y_{ij}=1 | d_i^{N,n})
+	\end{equation}
 
-
-
-\begin{theorem}
-	 Given a the distribution $p(d_i=n)$  of a degree $d_i \quad \forall i \in E$, for any joint exchangeable graph $G(V,E)$, then if $n >> 0$ the distribution $p$ is c-bursty iff (\textcolor{red}{Need to introduce this definition of the burstiness, who said that a distribution is c-bursty if it a exist a integer $c$ such that the distribution is bursty for all $n > c$}) :
-	\begin{align}
-	  \Delta_n \p(y_{ij}=1 | d_i^{N,n}) > 0
-	\end{align}
-	Where $d_i^{N,n}$ represent the a set of binary value of size N and having $n$ value to one, where $n$ represent the degree of $i$. 
 \end{theorem}
 
 \begin{proof}
@@ -65,22 +78,41 @@ There are two things to note here. The first one is that $f_{ik}$ in (iii) equal
 	&= \frac{N-n-1}{n+2} \p(y_{ij}=1 | d_i^{N,n+1}) - \frac{N-n}{n+1} \p(y_{ij}=1 | d_i^{N,n})
 	\end{align*}
 	
-	The burstiness properties is statisfied iff $\forall n \in \mathbb{N}$:
+	The burstiness properties is satisfied iff $\forall n \in \mathbb{N}$:
 	\begin{align*}
 	&\Delta_nb_n > 0 \iff \\
 	& \frac{(n+1)(N-n-1)}{(n+2)(N-n)}\p(y_{ij}=1 | d_i^{N,n+1})  > \p(y_{ij}=1 | d_i^{N,n})
 	\end{align*}
 	
-	The study of the following series 
+	The study of the series forming the left hand part of last equation gives hint about how and when the the distribution $p$ would be bursty depending on the predictive distribution of one observation in the data. Particulary this series is less than one with a maxima at $(N-2)/2$ and is symmetric around this extrema for $N \in [0, N-2]$. We represent the series in figuure \ref{fig:bp}.
+	
+	
+	\begin{figure}[h]
+		\centering
+		\includegraphics[scale=0.4]{img/bp}
+		\caption{This plot represent the series that constraints the predictive distribution for the burstiness effect in exchangeable graph for N=100 (100 nodes)}
+		\label{fig:bp}
+	\end{figure}
 
 \label{b-theorem}
 \end{proof}
 
-The above definitions, characterizing probabilistic link models according to burstiness in social networks, are thus directly related to the general definition of burstiness given in Definition~\ref{def:burst}. Note that the theorem \ref{b-theorem} reflect the fact there is is a cut-off where a distribution loose if bursty aspect. This is illustrated by the power law distribution that need such cut-off because a distribution nned to sum to one  \ref{clauset2009power}.
+Interestingly this theorem tell us how the burstiness effect, for exchangeable sequence with finite capacity $N$, will collapse for a small number of observation and notably, when the number of observations get closer to the capacity.\\
+
+A typical form of the predictive distribution $\p(y_{ij}=1 | d_i^{N,n})$ is a linear function of the sufficient statistics of the observations (see \ref{prop:diaconis}). Though the burstiness effect would have specific constraint in this case.
+
+%\begin{corollary}
+%	A degree distribution  $p(d_i=n)$ of any node $i$ in a jointly exchangeable graph $G(V,E)$ such that it admits a predictive distribution of the form $\p(y_{ij}=1 | d_i^{N,n}) = an+b$, is bursty iff:
+%Polynome solution, constraint on the positive roots, a, b > ...
+%\end{corollary}
+
+
+
+We now apply the previous results to characterize the preferential attachments effect in social networks.
 
 
 \begin{proposition}
-	The IMMSB models satisfy the local preferential attachments in the generative mode $\M_g$.
+	The IMMSB models satisfy the local preferential attachments in the generative model $\M_g$.
 \end{proposition}
 
 \begin{proof}
@@ -94,8 +126,8 @@ p(y_{ij} = 1 | d_i^{N,n}, \mathcal{M}) = \int_{\Theta} p(y_{ij}=1|\Theta) \frac
 By only restraining the relations that occur inside class $c=\{k,k\}$, thus we note $N^c$ the total number of relations (links and non-links) in the class $c$ for node $i$, one can write the local preferential attachment:
 
 \begin{align*} \label{eq:sum}
-&p(y_{ij} = 1 | d_{ic}^{N,n}, \mathcal{M})  \\
-&=  \frac{ \int_{\phi_{c}} p(y_{ij}=1|\phi_{c}) p(d_{ic}^{N,n} | \phi_{c}) p(\phi_{c}) d\phi_{c}}{\int_{\phi_{c}} \p(d_{ic}^{N,n} | \phi_{c}))       p(\phi_{c}) d\phi_{c}}   \\
+&p(y_{ij} = 1 | d_{ic}^{N^c,n}, \mathcal{M})  \\
+&=  \frac{ \int_{\phi_{c}} p(y_{ij}=1|\phi_{c}) p(d_{ic}^{N,n} | \phi_{c}) p(\phi_{c}) d\phi_{c}}{\int_{\phi_{c}} \p(d_{ic}^{N^c,n} | \phi_{c}))       p(\phi_{c}) d\phi_{c}}   \\
 &= \frac{\int_{\phi_c} \phi_c^{n+1}(1-\phi_c)^{N^c-n} \phi_c^{\lambda_1-1} (1-\phi_c)^{\lambda_0-1} d\phi_{c}}{\int_{\phi_c} \phi_c^{n}(1-\phi_c)^{N^c-n} \phi_c^{\lambda_1-1} (1-\phi_c)^{\lambda_0-1} d\phi_{c}} \\
 &= \frac{ \text{B}(n+1+\lambda_1, N^c-n+\lambda_0) }{\text{B}(n+\lambda_1, N^c-n+\lambda_0)} \\
 &= \frac{n+\lambda_1}{N^c + \lambda_1 +\lambda_0}
@@ -114,27 +146,36 @@ Where $\text{B}()$ is the beta function. The last equation show that the predict
 \end{proof}
 
 \begin{proposition}
-	The ILFM and IMMSB models do not statisfy the global and local preferential attachments. in the mode $\M_e$.
+	The ILFM and IMMSB models do not satisfy the global and local preferential attachments. in the mode $\M_e$.
 \end{proposition}
 
-The proof of this statement is trivially true in the sens that given $\mat{F}$ and $\mat{\Theta}$, the link likelihood is fully determined and hence do not depend on new links being generated. 
+The proof of this statement is trivially true in the sens that given $\mat{F}$ and $\mat{\Theta}$, the link likelihood is fully determined and hence do not depend on new links being generated. Furthermore, we show empirical counter example, where figure \ref{fig:gen_burst_mmsb} show some complex pattern in the empirical distribution of the overall degree that are clearly non bursty.
 
-\begin{proposition}
-	Both ILFM and IMMSB models satisfy the feature burstiness.
+\begin{proposition} \label{prop:diaconis}
+	Both ILFM and IMMSB models satisfy the feature burstiness for $n < L$ under some conditions on their hyperparameters  and $L$ a number of observation depending of hyperparameters.
 \end{proposition}
 
-The proof for this statement comes directly from the Diaconis-Ilvisaker results \cite{diaconis1979conjugate}. They state \emph{'subject to regularity conditions, the conjugate priors typically used satisfy, and are characterized by, a  similar relation of posterior linearity'}:
+\begin{proof}
+The Diaconis-Ilvisaker theorem \cite{diaconis1979conjugate} state \emph{'subject to regularity conditions, the conjugate priors typically used satisfy, and are characterized by, a  similar relation of posterior linearity'}:
 \begin{equation}
-\E[\E[X\mid \Theta] \mid X=x] = ax+b \quad \text{for} \quad x=0,1,2,... \nonumber
+\E_\Theta[\E_{X|\Theta}[X\mid \Theta] \mid X=x] = ax+b \quad \text{for} \quad x=0,1,2,... \nonumber
 \end{equation}
 
 Especially, the Dirichlet Process and the Indian Buffet Process, as prior for the latent features, are typically build on the suitable conjugate distribution respectively Dirichlet-Multinomial and Beta-Bernoulli. Furthermore, this claim is highlighted by the Gibbs update that corroborate the feature burstiness effect:
-\begin{align}
+\begin{align} \label{eq:feat_up}
 &\p(f_{ik} = 1 | F^{-ik}) = \frac{m_k^{-ik}}{N} \qquad \text{ILFM feature update} \nonumber \\
 &\p(f_{ik} = 1 | F^{-ik}) = \frac{n_{ik}^{-z_{ij}}+\alpha_k}{N+\alpha_.} \qquad \text{IMMSB feature update} \nonumber \\
 \end{align}
 
 Where the $m_k^{-ik}$ described the number of elements that have the $k$-iem feature active except for element $i$, similarly $n_{ik}^{-z_{ij}}$ represents the number of times that $i$ was assigned to $k$ except for relation $(ij)$ (class membersehip are jointly sampled in MMSB).
+
+By applying theorem \ref{th:burst_exch} for linear predictive distribution, it can be easily show that the burstiness is true below a number $L$ which is the positive roots of the following polynoms:
+\begin{equation}
+	 an^2 + 3an + a + b + N(b-a) = 0
+\end{equation}
+
+The condition on the hyperparameters $a$ and $b$ arise in order to find a stricly positive roots of this polynom. In the case of ILFM and IMMSB, it is equivalent to solve the polynom whith a=1 and  $b=0$ or $b=\alpha_k$ for respectively ILFM and IMMSB. The positive roots arise in this case if $b < 1$, which determines $L$.
+\end{proof}
 
 We represent tree networks generated by ILFM in figure \ref{fig:gen_burst_ilfm} and IMMSB \ref{fig:gen_burst_mmsb}. We compute a goodness of fit to quantify the power law hypothesis on the empirical degree distributions. The protocol is described in section \ref{sec:experiments-busrt}. As an empirical illustration for our claims on preferential attachment, we show a 3*3 figure where each columns is particular setting of hyper-parameter and the rows are respectively, the global degree distribution, the local degree distribution and feature distribution (on a max a assignment point of view).
 
@@ -176,8 +217,5 @@ As we can see in the experiments, we can generate networks that do not fit the b
 	\label{fig:gen_burst_mmsb}
 \end{figure}
 
-%\paragraph{Remark}
-%We see that is possible to generate networks that don't satisfy the global preferential effect...
-\textcolor{red}{remark on the global preferential attachment, that is not satisify on the realisation of networks provided in figure 3 ?}
 
 
